Z-index problem fixed for search autocomplete

--- a/src/components/sections/Search/Search.scss
+++ b/src/components/sections/Search/Search.scss
@@ -21,6 +21,7 @@
     position: absolute;
     right: 0;
     width: 100%;
+    z-index: $g-z-index-c-autocomplete;
   }
 
   &__suggestions-section-title {
